# topsy

./: .gitignore  README.md  pyproject.toml
topsy/: __main__.py  config.py
topsy/plugins/: __init__.py  notes.py
