[tool.poetry]
name = "topsy"
version = "0.1.0"
description = ""
authors = ["Jeremy Lucas <me@jerluc.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.3"
pydantic = "^2.7.1"
numpy = "^1.26.4"
tomlkit = "^0.12.4"
platformdirs = "^4.2.1"
marko = "^2.0.3"
imgui = {extras = ["glfw"], version = "^2.0.0"}

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
ruff = "^0.4.2"
pytest = "^8.2.0"


[tool.mypy]
plugins = [
  "pydantic.mypy"
]

disable_error_code = "import-untyped"
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = false
check_untyped_defs = true
no_implicit_reexport = true


[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
